code/Chat.razor.scss
Chat
{
	position: absolute;
	top: 100px;
	left: 200px;
	bottom: 200px;
	width: 600px;
	justify-content: center;
	align-items: center;
	font-weight: bold;
	border-radius: 20px;
	flex-direction: column;
	align-items: stretch;
	font-size: 17px;
	font-family: Poppins;
	gap: 10px;

	.output
	{
		flex-grow: 1;
		flex-direction: column;
		justify-content: flex-end;
		align-items: stretch;
		gap: 5px;

		.chat_entry
		{
			//background-color: #222d;
			padding: 2px;
			gap: 10px;
			text-shadow: 2px 2px 2px #000a;
			align-items: center;

			.avatar
			{
				width: 32px;
				height: 32px;
				background-position: center;
				background-size: cover;
				border-radius: 100px;
			}

			.author
			{
				color: #2d95ce;
				white-space: nowrap;
				flex-shrink: 0;
			}

			.message
			{
				color: #fff;
			}
		}
	}

	.input
	{
		color: white;
	}

	&.open
	{
		.input
		{
			background-color: #db3984;
		}
	}
}

